--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   url_launcher: ^6.3.1
   image_picker: ^1.1.2
   riverpod: ^2.6.1
+  firebase_storage: ^12.4.5
+  cloud_firestore: ^5.6.6
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
