--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^12.4.5
   cloud_firestore: ^5.6.6
   curved_navigation_bar: ^1.0.6
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
