--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
     - assets/images/Wehdat.png
     - assets/images/Ahli.jpg
     - assets/images/Hussain.gif
+    - assets/images/player.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
