--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   flutter_riverpod: ^2.6.1
   shared_preferences: ^2.5.3
+  firebase_messaging: ^15.2.5
 
 dev_dependencies:
   flutter_test:
