--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/images/Ahli.jpg
     - assets/images/Hussain.gif
     - assets/images/player.png
+    - assets/images/forgot_password.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
