--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   shared_preferences: ^2.5.3
   firebase_messaging: ^15.2.5
   cached_network_image: ^3.4.1
+  firebase_app_check: ^0.3.2+5
 
 dev_dependencies:
   flutter_test:
