--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_messaging: ^15.2.5
   cached_network_image: ^3.4.1
   firebase_app_check: ^0.3.2+5
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
