--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cached_network_image: ^3.4.1
   firebase_app_check: ^0.3.2+5
   intl: ^0.20.2
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
