--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,8 @@ flutter:
     - assets/images/player.png
     - assets/images/forgot_password.jpg
     - assets/images/change_password.jpg
+    - assets/images/soccerplayer.png
+    - assets/images/soccerTeam.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
