--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_app_check: ^0.3.2+5
   intl: ^0.20.2
   google_sign_in: ^6.3.0
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
