--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   intl: ^0.20.2
   google_sign_in: ^6.3.0
   share_plus: ^11.0.0
+  fl_chart: ^1.0.0
+  firebase_analytics: ^11.4.6
+  lucide_icons: ^0.257.0
 
 dev_dependencies:
   flutter_test:
